# wgpu-renderer

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  index.html  run-wasm.sh
.github/workflows/: build.yml
res/shaders/: constants.wgsl  depth.wgsl  fog.wgsl  globals.wgsl  light.wgsl  noise.wgsl  pbr.wgsl
src/: lib.rs  main.rs
src/core/: camera.rs  instance.rs  light.rs  material.rs  mesh.rs  mod.rs  model.rs  pass.rs  resources.rs  state.rs  texture.rs  updater.rs  window.rs
src/shaders/: light.wgsl  preprocessor.rs  test.wgsl
src/shaders/wgsl/: brdf.wgsl  constants.wgsl  test.wgsl
src/surf/: mod.rs  state.rs  types.rs  updater.rs
