[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5"
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.14.2"
pollster = "0.2.5"
bytemuck = { version = "1.13.0", features = ["derive"] }
image = { version = "0.24.5", features = ["png", "tga"] }
anyhow = "1.0.68"
cgmath = "0.18"
tobj = { version = "3.2.1", features = ["async"] }
gltf = "1.0.0"
wgpu-types = "0.14.1"

[build-dependencies]
anyhow = "1.0.68"
fs_extra = "1.2.0"
glob = "0.3.1"
