[package]
name = "wgpu-renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wgpu-renderer"
path = "src/main.rs"

[profile.dev]
opt-level = 1 # loading gltf is super slow without this

[dependencies]
winit = "0.27.5"
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.14.2"
pollster = "0.2.5"
bytemuck = { version = "1.13.0", features = ["derive"] }
image = { version = "0.24.5", features = ["png", "tga"] }
anyhow = "1.0.68"
cgmath = "0.18"
tobj = { version = "3.2.1", features = ["async"] }
gltf = "1.0.0"
wgpu-types = "0.14.1"
regex = "1.7.1"
rust-embed = { version = "6.4.2", features = ["debug-embed"]}
cfg-if = "1"
instant = "0.1.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.14", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[build-dependencies]
anyhow = "1.0.68"
fs_extra = "1.2.0"
glob = "0.3.1"
